--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,35 @@
-body {
-    background: #fff;
+body{
+    background-color: rgb(202, 196, 196);
     color: #333;  
 }
-.dark-mode {
+.dark-mode{
     background-color: black;
+}
+main{
+    width:100%;
+    height:100%;
+}
+.grid{
+    width:100%;
+    height:100%;
+    display:flex;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    column-gap:20px;
+}
+article{
+    background-color: orange;
+    width:200px;
+    height:200px;
+    display: grid;
+    grid-template-rows: auto auto auto;
+}
+h2{
+font-size:15px;
+}
+p{
+font-size: 11px;
+}
+.addBtn{    
+    background-color:grey;
 }
